--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@ License: You must have a valid license purchased only from https://themes.getboo
   <head>
     <meta charset="utf-8" />
     <title>Metronic | React Demo 1</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=.9"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +31,11 @@ License: You must have a valid license purchased only from https://themes.getboo
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/media/logos/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="%PUBLIC_URL%/media/logos/favicon.ico"
+    />
 
     <link
       href="//fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto:300,400,500,600,700"
@@ -60,7 +67,10 @@ License: You must have a valid license purchased only from https://themes.getboo
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="splash-screen" class="kt-splash-screen">
-      <img src="%PUBLIC_URL%/media/logos/logo-mini-md.png" alt="Metronic logo" />
+      <img
+        src="%PUBLIC_URL%/media/logos/logo-mini-md.png"
+        alt="Metronic logo"
+      />
       <svg class="spinner" viewBox="0 0 50 50">
         <circle
           class="path"
